--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,8 @@ jsonschema>=3.2.0
 xmljson==0.2.0
 rq>=1.0
 boto3==1.12.32
+google-api-core==1.22.2
+google-cloud-core==1.4.1
 google-cloud-storage==1.28.1
 flask_wtf==0.14.3
 label-studio-converter>=0.0.17
